# spark_learn

./: .gitignore  README.md  notes.md  pyproject.toml
hello_spark/: log4j.properties  main.py  spark.conf
hello_spark/lib/: utils.py
modules/: data_sink.py  hello_spark.py  schema_demo.py
modules/lib/: logger.py  utils.py
modules/spark_conf/: schema_demo_spark.conf
src/spark_learn/: gen_dataset.py  mnmcount.py
tests/: test_utils.py
